--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "Final_Project-DPI",
   "version": "1.0.0",
   "dependencies": {
-    "@hotwired/stimulus": "^3.2.2"
+    "@hotwired/stimulus": "^3.2.2",
+    "@hotwired/turbo-rails": "^7.3.0",
+    "@rails/ujs": "^7.1.2",
+    "controllers": "^0.0.2"
   }
 }
