--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for singles on 2023-11-19T18:04:11-06:00
+# fly.toml app configuration file generated for singles on 2023-11-27T14:42:05-06:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -9,9 +9,6 @@ console_command = "/rails/bin/rails console"
 
 [build]
 
-[deploy]
-  release_command = "./bin/rails db:prepare"
-
 [http_service]
   internal_port = 3000
   force_https = true
@@ -19,6 +16,11 @@ console_command = "/rails/bin/rails console"
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+
+[[vm]]
+  cpu_kind = "shared"
+  cpus = 1
+  memory_mb = 1024
 
 [[statics]]
   guest_path = "/rails/public"
